--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,12 +10,21 @@
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
+        android:enableOnBackInvokedCallback="true"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.Campusconnectfinal"
         tools:targetApi="31">
+        <activity
+            android:name=".messageactivities.chat"
+            android:exported="false" />
+        <activity android:name=".messageactivities.Messagemain"
+            android:exported="false" />
+        <activity
+            android:name=".dltaddialogue"
+            android:exported="false" />
         <activity
             android:name=".homeactivities.Contacts"
             android:exported="false" />
